[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-M processors"
documentation = "https://docs.rs/cortex-m"
keywords = ["arm", "cortex-m", "register", "peripheral"]
license = "MIT OR Apache-2.0"
name = "cortex-m-asm"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m"
# arbitrary number right now
version = "0.1.0"
edition = "2018"
links = "cortex-m"  # prevent multiple versions of this crate to be linked together

[dependencies]
#bare-metal = { version = "0.2.0", features = ["const-fn"] }
#volatile-register = "0.2.0"
#bitfield = "0.13.2"
#embedded-hal = "0.2.4"

[dependencies.klee-rs]
git = "https://github.com/markhakansson/klee-rs.git"
version = "0.1"
optional = true

[features]
cm7-r0p1 = []
inline-asm = []
linker-plugin-lto = []
klee-analysis = ["klee-rs"]

[workspace]
members = ["xtask"]

[package.metadata.docs.rs]
targets = [
    "thumbv8m.main-none-eabihf",
    "thumbv6m-none-eabi",
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
    "thumbv8m.base-none-eabi",
    "thumbv8m.main-none-eabi"
]
